# libuiohook

./: CMakeLists.txt  README.md
.github/workflows/: package.yml
demo/: demo_hook.c  demo_hook_async.c  demo_post.c  demo_properties.c
include/: uiohook.h
man/: hook_get_auto_repeat_rate.man  hook_run.man
src/: logger.c  logger.h
src/darwin/: dispatch_event.c  input_helper.c  input_helper.h  input_hook.c  post_event.c  system_properties.c
src/linux/: loader.c
src/linux/legacy/: dispatch_event.c  dispatch_event.h  input_helper.c  input_helper.h  input_hook.c  unused_functions.c
src/linux/shared/: input_loop.c  input_loop.h
src/linux/wayland/: dispatch_event.c  input_helper.c  input_hook.c  monitor_helper.c  post_event.c  system_properties.c  unused_functions.c
src/linux/x11/: dispatch_event.c  dispatch_event.h  input_helper.c  input_hook.c  post_event.c  system_properties.c  unused_functions.c
src/macos/: dispatch_event.c  dispatch_event.h  input_helper.c  input_helper.h  input_hook.c  post_event.c  system_properties.c  unused_functions.c
src/wayland/: dispatch_event.c  input_helper.c  input_hook.c  system_properties.c
src/windows/: dispatch_event.c  dispatch_event.h  input_helper.c  input_helper.h  input_hook.c  monitor_helper.c  monitor_helper.h  post_event.c  system_properties.c  unused_functions.c
src/x11/: dispatch_event.c  input_helper.c  input_helper.h  input_hook.c  post_event.c  system_properties.c
test/: input_helper_test.c  minunit.h  system_properties_test.c  uiohook_test.c
